[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Tomas Strand <tomas@fik1.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"

[dependencies.num]
version = "0.4"
default-features = false